[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name="whatsapp-python"
authors = [{name="Filippo Romani", email="mail@filipporomani.it"}]
description="Open source Python wrapper for the WhatsApp Cloud API"
readme = "README.md"
requires-python = ">=3.10"
classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Customer Service",
    "Intended Audience :: Education",
    "Intended Audience :: Telecommunications Industry",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Communications :: Chat",
    "Topic :: Communications :: Telephony",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Software Development :: Libraries :: Python Modules",

]
dynamic = [
  "version"
]
dependencies = ["fastapi", "uvicorn", "requests_toolbelt", "requests", "python-dotenv", "BeautifulSoup4"]

[project.urls]
Homepage = "https://github.com/filipporomani/whatsapp-python"
Docs = "https://github.com/filipporomani/whatsapp-python/wiki"
"Issues Reporting" = "https://github.com/filipporomani/whatsapp-python/issues"
Download = "https://github.com/filipporomani/whatsapp-python/releases/latest"
Changelog = "https://github.com/filipporomani/whatsapp-python/releases"


[tool.hatch.version]
path = "whatsapp/constants.py"
variable = "VERSION"

[tool.hatch.build.targets.wheel]
packages = ["whatsapp"]